--- a/package.json
+++ b/package.json
@@ -12,8 +12,9 @@
     "canvas-confetti": "^1.6.0",
     "eslint": "8.41.0",
     "eslint-config-next": "13.4.4",
-    "next": "13.4.4",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "next": "^13.4.19",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "sharp": "^0.32.5"
   }
 }
